# roghub

./: 99-roghub-control.rules  CMakeLists.txt  README.md
.github/workflows/: build-check.yml
src/: config.c  config.h  cpucontrol.c  cpucontrol.h  fancontrol.c  fancontrol.h  main.c  osd.c  osd.h  profile.c  profile.h  test.c  version.h.in
